<resources>
    <string name="app_name">TestMission</string>
    <string name="add_new_device">添加新设备</string>
    <string name="enter_ip">请输入IP</string>
    <string name="enter_port">请输入端口号（1–65535）</string>
    <string name="enter_name">请输入自定义名称</string>
    <string name="enter_username">请输入设备登录用户名</string>
    <string name="enter_password">请输入设备登录密码</string>
    <string name="confirm">确定</string>
    <string name="add_device">添加设备</string>
    <string name="enter_real_ip">请输入正确ip地址</string>
    <string name="enter_real_port">请输入正确的端口号</string>
    <string name="setting">配置</string>
    <string name="disconnect">断开</string>
    <string name="flashback">回放</string>
    <string name="more">更多</string>
    <string name="device_setting">配置</string>
    <string name="device_modify">设备修改</string>
    <string name="delete_device">删除设备</string>
    <string name="device_list">设备列表</string>
    <string name="set_sip">SIP设置</string>
    <string name="set_pu">PU设置</string>
    <string name="tv_registry">注册中心</string>
    <string name="tv_registry_port">端口号</string>
    <string name="tv_heart">心跳服务器</string>
    <string name="tv_warn">报警服务器</string>
    <string name="tv_address">IP地址</string>
    <string name="tv_server_id">服务器ID</string>
    <string name="tv_device_id">设备ID</string>
    <string name="tv_account">账户</string>
    <string name="tv_pw">密码</string>
    <string name="tv_registry_validity">注册有效期</string>
    <string name="tv_heart_interval">心跳间隔</string>
    <string name="tv_heart_times">心跳次数</string>
    <string name="tv_need_registry">需要注册</string>
    <string name="tv_choose_channel">通道选择</string>
    <string name="tv_channel_num">通道编号</string>
    <string name="tv_warn_input">报警输入</string>
    <string name="tv_warn_input_num">报警输入编号</string>
    <string name="tv_warn_level">报警级别</string>
    <string name="save">保存</string>
    <string name="hint_address">请输入IP地址</string>
    <string name="hint_port">请输入端口号</string>
    <string name="hint_serverId">请输入服务器ID</string>
    <string name="hint_deviceId">请输入设备ID</string>
    <string name="hint_account">请输入账户</string>
    <string name="hint_pw">请输入密码</string>
    <string name="hint_validity">请输入注册有效期</string>
    <string name="hint_interval">请输入心跳间隔</string>
    <string name="hint_times">请输入心跳次数</string>
    <string name="hint_channel">请输入通道选择</string>
    <string name="hint_channelNum">请输入通道编号</string>
    <string name="hint_input">请输入报警输入</string>
    <string name="hint_inputNum">请输入报警输入编号</string>
    <string name="hint_level">请输入报警级别</string>
    <string name="hint_serverIp">请输入服务器IP</string>
    <string name="hint_registry">请输入注册中心IP</string>
    <string name="hint_heart">请输入心跳服务器IP</string>
    <string name="hint_warn">请输入报警服务器IP</string>
    <string name="video_play">实时预览</string>
    <string name="remove_play">远程回放</string>
    <string name="play_start">播放</string>
    <string name="play_stop">停止</string>
    <string name="play_pause">暂停播放</string>
    <string name="catch_picture">抓拍</string>
    <string name="record_start">录像</string>
    <string name="sound_open">声音</string>
    <string name="fast_forward">快进</string>
    <string name="add_ip">IP：</string>
    <string name="add_port">端口号：</string>
    <string name="add_dev_id">设备ID：</string>
    <string name="add_sup_id">中间件ID：</string>
    <string name="add_client_sup_id">设备所在中间件ID：</string>
    <string name="back">返回</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="storage_module">前端存储</string>
    <string name="module_chanage_success">切换成功，请重新连接</string>
    <string name="hold_on">正在连接</string>
    <string name="play_fail">播放失败</string>
    <string name="play_success">接收到第一帧画面</string>
    <string name="stepping">步进</string>
    <string name="time_format">2017-01-01 00:00:00</string>
    <string name="talk_open">对讲</string>
    <string name="connect">连接</string>
    <string name="is_connect">已连接设备</string>
    <string name="remoteplay_time">播放时间：</string>
    <string name="time_normal">00:00:00</string>
    <string name="please_connect">请点击连接</string>
    <string name="ptz_open">云台控制</string>
    <string name="pt_user_login_ip">请输入中间件IP</string>
    <string name="pt_user_login_port">请输入中间段端口号</string>
    <string name="pt_dev_id">请输入设备ID</string>
    <string name="pt_sup_id">请输入中间件ID</string>
    <string name="pt_username">用户名</string>
    <string name="pt_password">密码</string>
    <string name="pt_storage_sup_id">请输入录像所在中间件ID</string>
    <string name="pt_client_sup_id">请输入设备所在中间件的ID</string>
    <string name="pt_user_login">登录</string>
    <string name="txt_focus">聚焦：</string>
    <string name="txt_largen_shorten">变倍：</string>
    <string name="catchpicture_fail">抓拍失败</string>
    <string name="can_not_logon">数据不能为空</string>
    <string name="add_channel_id">通道号：</string>
    <string name="catchpicture_success">抓拍成功</string>
    <string name="ptz_can_use">现在可以使用云台</string>
    <string name="open_ptz_first">请先打开云台</string>
    <string name="open_sound_fail">打开声音失败</string>
    <string name="open_sound_success">打开声音成功</string>
    <string name="close_sound_fail">关闭声音失败</string>
    <string name="close_sound_success">关闭声音成功</string>
    <string name="open_talk_fail">打开对讲失败</string>
    <string name="open_talk_success">打开对讲成功</string>
    <string name="open_record_fail">开始录像失败</string>
    <string name="open_record_success">开始录像成功</string>
    <string name="close_record_fail">关闭录像失败</string>
    <string name="close_record_success">关闭录像成功</string>
    <string name="remoteplay_player_fast_forward">倍快进</string>
    <string name="remoteplay_player_normal">正常播放</string>
    <string name="remoteplay_player_fast_error">快进失败</string>
    <string name="remoteplay_player_stepping_error">步进失败</string>
    <string name="remoteplay_player_pause_error">暂停失败</string>
    <string name="play_video_failed">播放失败</string>
    <string name="remoteplay_please_pause_first">请先暂停播放，再使用步进</string>
    <string name="main_please_reboot_first">您已初始化软件，请重启后再更改选择</string>
    <string name="main_choose_pt">平台方式连接</string>
    <string name="main_choose_ddns">IP直接连接</string>
    <string name="transitionName">device_transition</string>
    <string name="save_stream">省流量</string>
</resources>
