<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:onClick="onBackClick"
            android:src="@mipmap/back_big" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_device"
            android:textColor="@color/black" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@mipmap/id"
        android:lines="1"
        android:drawablePadding="10dp"
        android:hint="@string/enter_ip"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@mipmap/id"
        android:lines="1"
        android:drawablePadding="10dp"
        android:maxLength="5"
        android:hint="@string/enter_port"
        android:inputType="number"
        android:text="3000"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/et_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:background="@null"
        android:drawableLeft="@mipmap/device_name"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:lines="1"
        android:drawableLeft="@mipmap/username"
        android:drawablePadding="10dp"
        android:hint="@string/enter_username"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@mipmap/password"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:lines="1"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/bg_btn"
        android:onClick="onConfirmClick"
        android:text="@string/confirm"
        android:textColor="@color/white" />

</LinearLayout>