<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:onClick="onBackClick"
            android:src="@mipmap/back_big" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/device_setting"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:onClick="onDeviceModify"
        android:id="@+id/rl_device_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_modify"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@mipmap/arrow"
            android:drawablePadding="5dp"
            tools:text="设备1" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/line_color" />

    <TextView
        android:onClick="onDeviceDelete"
        android:id="@+id/tv_delete_device"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/delete_device"
        android:textColor="#333333"
        android:textSize="15sp" />

</LinearLayout>