<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            tools:text="设备一" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/setting"
            android:text="@string/setting"
            android:textSize="13dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:clipChildren="false"
        android:background="@color/black"
        android:clipToPadding="false"
        android:layout_height="208dp">



        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:transitionName="@string/transitionName"
            android:layout_width="match_parent"
            android:clickable="false"
            android:background="@color/black"
            android:layout_height="208dp">


            <SurfaceView
                android:id="@+id/surfaceView1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_surface_bg"
                android:padding="1dp"

                app:layout_constraintBottom_toTopOf="@id/surfaceView3"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/surfaceView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1" />

            <SurfaceView
                android:id="@+id/surfaceView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_surface_bg"
                android:padding="1dp"
                app:layout_constraintBottom_toTopOf="@id/surfaceView4"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/surfaceView1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1" />

            <SurfaceView
                android:id="@+id/surfaceView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_surface_bg"
                android:padding="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/surfaceView4"
                app:layout_constraintTop_toBottomOf="@id/surfaceView1"
                app:layout_constraintVertical_weight="1" />

            <SurfaceView
                android:id="@+id/surfaceView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_surface_bg"
                android:padding="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/surfaceView3"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surfaceView2"
                app:layout_constraintVertical_weight="1" />

        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="match_parent"
            android:scaleType="center"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@mipmap/play" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/disconnect"
            android:drawablePadding="5dp"
            android:text="@string/disconnect"
            android:textColor="@color/textc" />

        <TextView
            android:id="@+id/tv_flashback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/flashback"
            android:drawablePadding="5dp"
            android:text="@string/flashback"
            android:textColor="@color/textc" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/more"
            android:drawablePadding="5dp"
            android:text="@string/more"
            android:textColor="@color/textc" />
    </RelativeLayout>


</LinearLayout>